# sonarqube-examples

./: README.md
abap/: sonar-project.properties
ansible/: sonar-project.properties
apex/: sonar-project.properties
arm/: sonar-project.properties
c/: sonar-project.properties
cloudformation/: sonar-project.properties
cobol/: sonar-project.properties
cpp/: sonar-project.properties
csharp/: CsharpApp.csproj  CsharpApp.sln  sonar-project.properties
css/: sonar-project.properties
dart/: pubspec.yaml  sonar-project.properties
dockerfile/: sonar-project.properties
flex/: sonar-project.properties
github-actions/: sonar-project.properties
go/: go.mod  sonar-project.properties
groovy/: sonar-project.properties
html/: sonar-project.properties
java/: pom.xml  sonar-project.properties
javascript/: package.json  sonar-project.properties
jcl/: COMPILE.jcl  JCLEXAMPLE.jcl  PROCESS.jcl  sonar-project.properties
json/: sonar-project.properties
kotlin/: sonar-project.properties
kubernetes/: sonar-project.properties
objc/: sonar-project.properties
php/: composer.json  phpunit.xml  sonar-project.properties
pli/: sonar-project.properties
plsql/: sonar-project.properties
python/: .gitignore  pyproject.toml  sonar-project.properties
python/.github/workflows/: sonar.yml
python/src/: __init__.py  client.py  config.py  hello.py  main.py  models.py  service.py  utils.py
python/tests/: __init__.py  conftest.py  test_models.py  test_service.py  test_utils.py
rpg/: sonar-project.properties
ruby/: Gemfile  sonar-project.properties
(+358 files in other folders)
